Fix white gap on very large screens on left and right of home page hero

--- a/bgee-webapp/src/main/webapp/css/general.css
+++ b/bgee-webapp/src/main/webapp/css/general.css
@@ -12,6 +12,8 @@
     background-color: #999999;
     height: 300px;
     padding-top: 40px;
+    margin-right: -1%;
+    margin-left: -1%;
 }
 
 #bgee_hp_logo {
